--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.games.MainActivity">
 
     <com.example.games.GamePanel
+        android:id="@+id/id_game"
         android:layout_centerInParent ="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
